--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
 Test
-Salutare!
-test
+<!DOCTYPE html>
+<html>
+<head>
+    <title>My site</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+<div class="topnav">
+    <a class="active" href="#home">Home</a>
+    <a href="#study">Studies</a>
+    <a href="#projects">Projects</a>
+    <a href="#contact">Contact</a>
+</div>
+</body>
+</html>
