--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@ Test
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>My site</title>
     <link rel="stylesheet" href="styles.css">
 </head>
