--- a/index.html
+++ b/index.html
@@ -1,17 +1,34 @@
-Test
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
     <title>My site</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
 </head>
 <body>
 <div class="topnav">
-    <a class="active" href="#home">Home</a>
-    <a href="#study">Studies</a>
-    <a href="#projects">Projects</a>
-    <a href="#contact">Contact</a>
+    <ul class="menu">
+        <li class="about">
+            <a ref="#myResume">My resume</a>
+        </li>
+        <li class="study">
+            <a href="#studys">Studies</a>
+        </li>
+        <li class="project">
+            <a href="#projects">Projects</a>
+        </li>
+        <li class="contact">
+            <a href="#contacts">Contact</a>
+        </li>
+    </ul>
+</div>
+<div>
+    <!--<img class="imgProfile" src="Snapseed1.jpg" alt="My img">-->
+</div>
+<div id="description">
+    <h1 class="#me">Hello, everyone!</h1>
+    <p></p>
 </div>
 </body>
 </html>
