--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>My site</title>
+    <title>Ioana Enescu's bio</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
 </head>
