--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         </li>
     </ul>
 </div>
-<div>
-    <!--<img class="imgProfile" src="Snapseed1.jpg" alt="My img">-->
+<div class="profile-box">
+    <img src="Snapseed1.jpg" alt="avatar" class="avatar">
 </div>
 <div id="description">
     <h1 class="#me">Hello, everyone!</h1>
-    <p></p>
+    <p>I am Ioana. I have 23 years old. I'm a civil engineer and I'm interested in programing. My training base in programing I acquired at Udacity.</p>
 </div>
 </body>
 </html>
