background-color & picture(avatar)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a ref="#myResume">My resume</a>
         </li>
         <li class="study">
-            <a href="#studys">Studies</a>
+            <a href="#studies">Studies</a>
         </li>
         <li class="project">
             <a href="#projects">Projects</a>
@@ -25,6 +25,7 @@
 </div>
 <div class="profile-box">
     <img src="Snapseed1.jpg" alt="avatar" class="avatar">
+    <h3 class="name">Ioana</h3>
 </div>
 <div id="description">
     <h1 class="#me">Hello, everyone!</h1>
