header, contents, borders, words

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
 </head>
 <body>
+<div class="header">
+    <h1>Ioana Enescu's bio</h1>
+</div>
 <div class="topnav">
     <ul class="menu">
         <li class="about">
-            <a ref="#myResume">My resume</a>
+            <a href="#myResume">My resume</a>
         </li>
         <li class="study">
             <a href="#studies">Studies</a>
@@ -18,18 +21,25 @@
         <li class="project">
             <a href="#projects">Projects</a>
         </li>
+        <li class="hobby">
+            <a href="#hobby">Hobbys</a>
+        </li>
         <li class="contact">
-            <a href="#contacts">Contact</a>
+            <a href="#contact">Contact</a>
         </li>
     </ul>
 </div>
 <div class="profile-box">
     <img src="Snapseed1.jpg" alt="avatar" class="avatar">
-    <h3 class="name">Ioana</h3>
+    <h2 class="name">Ioana</h2>
+    <h4 class="words">Freedom, Happiness, Love, Explore, Cats, Dogs, Photography, Programing.</h4>
 </div>
-<div id="description">
-    <h1 class="#me">Hello, everyone!</h1>
+<div class="description">
+    <h1 class="me">Hello, everyone!</h1>
     <p>I am Ioana. I have 23 years old. I'm a civil engineer and I'm interested in programing. My training base in programing I acquired at Udacity.</p>
 </div>
+<!--<div class="footer">
+    <p>Footer</p>
+</div>-->
 </body>
 </html>
