buttons functions on click

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
 </head>
 <body>
+<button onclick="topFunction()" id="myBtn" title="Go to top">Up</button>
 <div class="header">
     <h1>Ioana Enescu's bio</h1>
 </div>
@@ -16,30 +17,50 @@
             <a href="#myResume">My resume</a>
         </li>
         <li class="study">
-            <a href="#studies">Studies</a>
+            <a href="#studies" onclick="myFunction()">Studies</a>
         </li>
         <li class="project">
-            <a href="#projects">Projects</a>
+            <a href="#projects" onclick="myFunction2()">Projects</a>
         </li>
         <li class="hobby">
-            <a href="#hobby">Hobbys</a>
+            <a href="#hobby" onclick="myFunction3()">Hobbys</a>
         </li>
         <li class="contact">
-            <a href="#contact">Contact</a>
+            <a href="#contact" onclick="myFunction4()">Contact</a>
         </li>
     </ul>
 </div>
 <div class="profile-box">
     <img src="Snapseed1.jpg" alt="avatar" class="avatar">
-    <h2 class="name">Ioana</h2>
+    <h2 class="name">Ioana<br></h2>
     <h4 class="words">Freedom, Happiness, Love, Explore, Cats, Dogs, Photography, Programing.</h4>
 </div>
 <div class="description">
-    <h1 class="me">Hello, everyone!</h1>
+    <h1 class="me">Hello, everyone!<br></h1>
     <p>I am Ioana. I have 23 years old. I'm a civil engineer and I'm interested in programing. My training base in programing I acquired at Udacity.</p>
+</div>
+<div id="myStudiesDiv">
+    <h3>Studies<br></h3>
+    <p>My bachelor studies I've made them at Bucharest, in the Faculty of Civil, Industrial and Agricultural Buildings, which is part of the Technical University of Civil Engeneering Bucharest. It were 4 years with all the possible and impossible things, but after them I got the title of 'engineer'. In present I study in Braşov, Faculty of Economic Sciences and Business Administration. Here I follow the master studis at specialization: Management and Business Strategies. I decided that this Master’s Degree will help me a lot combine with the Bachelor Degree. So let's hope for the best in this.<br></p>
+    <p>I've recently received a opportunity to learn programming. I've signed up at Udacity (someone special to me suggested me that I have nothing to lose if I try). So I've got in. What have I study? Curios not? The Front-End Web Development, actually the basics of this. So I'm a begginer in all this. But don't worry, I'm preatty good at learning fast. </p>
+</div>
+<div id="myProjectsDiv">
+    <h3>Projects<br></h3>
+    <p>A lot of projects. Do not expect of that. I have same tiny projects. One of them is made after I have finished the Udacity Course. It is actually a grid that can be colored and also set limits for the width and height. It was pretty fun to do this. I've used JQuery for this. If you are curios I'll let you <a href="https://github.com/ioana25/Project---Pixel-Art-Maker">here</a> a link. Hope to enjoy it.</p>
+</div>
+<div id="myHobbysDiv">
+    <h3>Hobbys<br></h3>
+    <p>If you like dogs, cats, photography I'm pretty sure that you will love what is next to come. <i class="em em-smiley_cat"></i><br></p>
+    <p>For the photography section, you can <a href="https://500px.com/ioanaenescu">check</a> my 500px page. Hope to enjoy and if you have an account there to follow me. And also I'll be happy to see your work too.</p>
+</div>
+<div id="myContactDiv">
+    <h3>Contact<br></h3>
+    <p><i class="em em-email"></i>enescuioana.c@gmail.com<br></p>
+    <p><i class="em em-iphone"></i> +40734****59<br></p>
 </div>
 <!--<div class="footer">
     <p>Footer</p>
 </div>-->
+<script src="script.js"></script>
 </body>
 </html>
