--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
 </div>
 <div id="myContactDiv">
     <h3>Contact</h3><br>
-    <p><i class="fas fa-envelope-square"></i><br></p>
-    <p><i class="fab fa-500px"></i> <a href="https://500px.com/ioanaenescu">px</a></p>
+    <p><i class="fas fa-envelope-square"></i></p><br>
+    <p><a href="https://500px.com/ioanaenescu"><i class="fab fa-500px"></i>px</a></p>
 </div>
+
 <!--<div class="footer">
     <p>Footer</p>
 </div>-->
