--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Hello, everyone! I'm Ioana and I'm a civil engineer and I'm interested in programming. I love cats and dogs. In my free time I'm a amateur photographer. And also I'm learning programming.">
+    <meta name="author" content="Ioana Enescu">
+    <meta name="keywords" content="Bio, Programming, Dogs, Cats, Photography">
+    <meta name="viewport" content="width=divice-width, initial-scale=1.0">
     <title>Ioana Enescu's bio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -32,15 +36,15 @@
 <div class="profile-box">
     <img src="Snapseed1.jpg" alt="avatar" class="avatar">
     <h2 class="name">Ioana</h2><br>
-    <h4 class="words">Freedom, Happiness, Love, Explore, Cats, Dogs, Photography, Programing.</h4>
+    <h4 class="words">Freedom, Happiness, Love, Explore, Cats, Dogs, Photography, Programming.</h4>
 </div>
 <div class="description">
     <h1 class="me">Hello, everyone!</h1><br>
-    <p>I am Ioana. I have 23 years old. I'm a civil engineer and I'm interested in programing. My training base in programing I acquired at Udacity.</p>
+    <p>I am Ioana. I have 23 years old. I'm a civil engineer and I'm interested in programming. I love cats and dogs. In my free time I'm a amateur photographer, actually an IPhone photographer (You can visit my 500px page, hope you'll enjoy) . And also I'm learning programming.">
 </div>
 <div id="myStudiesDiv">
     <h3>Studies</h3><br>
-    <p>My bachelor studies I've made them at Bucharest, in the Faculty of Civil, Industrial and Agricultural Buildings, which is part of the Technical University of Civil Engeneering Bucharest. It were 4 years with all the possible and impossible things, but after them I got the title of 'engineer'. In present I study in Braşov, Faculty of Economic Sciences and Business Administration. Here I follow the master studis at specialization: Management and Business Strategies. I decided that this Master’s Degree will help me a lot combine with the Bachelor Degree. So let's hope for the best in this.</p><br>
+    <p>My bachelor studies I've made them at Bucharest, in the Faculty of Civil, Industrial and Agricultural Buildings, which is part of the Technical University of Civil Engineering Bucharest. It were 4 years with all the possible and impossible things, but after them I got the title of 'engineer'. In present I study in Braşov, Faculty of Economic Sciences and Business Administration. Here I follow the master studis at specialization: Management and Business Strategies. I decided that this Master’s Degree will help me a lot combine with the Bachelor Degree. So let's hope for the best in this.</p><br>
     <p>I've recently received a opportunity to learn programming. I've signed up at Udacity (someone special to me suggested me that I have nothing to lose if I try). So I've got in. What have I study? Curios not? The Front-End Web Development, actually the basics of this. So I'm a begginer in all this. But don't worry, I'm preatty good at learning fast. </p>
 </div>
 <div id="myProjectsDiv">
@@ -54,10 +58,9 @@
 </div>
 <div id="myContactDiv">
     <h3>Contact</h3><br>
-    <p><i class="fas fa-envelope-square"></i></p><br>
-    <p><a href="https://500px.com/ioanaenescu"><i class="fab fa-500px"></i>px</a></p>
+    <p><i class="fas fa-envelope-square"></i>ioana[at]ioanaenescu[]me</p><br>
+    <p class="page"><a href="https://500px.com/ioanaenescu"><i class="fab fa-500px"></i>px</a></p>
 </div>
-
 <!--<div class="footer">
     <p>Footer</p>
 </div>-->
