--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </div>
 <div class="description">
     <h1 class="me">Hello, everyone!</h1><br>
-    <p>I am Ioana. I have 23 years old. I'm a civil engineer and I'm interested in programming. I love cats and dogs. In my free time I'm a amateur photographer, actually an IPhone photographer (You can visit my 500px page, hope you'll enjoy) . And also I'm learning programming.">
+    <p>I am Ioana. I have 23 years old. I'm a civil engineer and I'm interested in programming. I love cats and dogs. In my free time I'm a amateur photographer, actually an IPhone photographer (You can visit my 500px page, hope you'll enjoy) . And also I'm learning programming."
 </div>
 <div id="myStudiesDiv">
     <h3>Studies</h3><br>
