--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="viewport" content="width=divice-width, initial-scale=1.0">
     <title>Ioana Enescu's bio</title>
     <link rel="stylesheet" href="styles.css">
+<style>
+
+</style>
 </head>
 <body>
 <div id="page">
@@ -15,16 +18,20 @@
     <header>
         <a class="logo" title="Ioana Enescu's bio" href="https://ioanaenescu.me/"><span>Ioana Enescu's bio</span></a>
     </header>
-    <section class="main">
+    <section class="card">
         <aside>
             <div class="content profile">
-                <!-- <img src="Snapseed1.jpg" alt="avatar" class="avatar">-->
+                <img src="Snapseed1.jpg" alt="avatar" class="avatar">
                 <h2 class="name">Ioana</h2><br>
                 <h4 class="words">Freedom, Happiness, Love, Explore, Cats, Dogs, Photography, Programming.</h4>
             </div>
+        </aside>
+    </section>
+    <section class="main">
+        <aside>
             <div class="content resume">
                 <h3><a href="#">Hello everyone!</a></h3>
-                <p>I am Ioana. I am 23 years old. I'm a civil engineer and I'm interested in programming. I love cats and dogs. In my free time I'm a amateur photographer, actually an IPhone photographer (You can visit my 500px page, hope you'll enjoy) . And also I'm learning programming.</p>
+                <p>I am Ioana. I am 23 years old. I'm a civil engineer and I'm interested in programming. I love cats and dogs. In my free time I'm a amateur photographer, actually an IPhone photographer (You can visit my <a href="https://500px.com/ioanaenescu">500px page</a>, hope you'll enjoy) . And also I'm learning programming.</p>
             </div>
         </aside>
     </section>
@@ -45,9 +52,9 @@
                 <p>For the photography section, you can <a href="https://500px.com/ioanaenescu">check</a> my 500px page. Hope to enjoy and if you have an account there to follow me. And also I'll be happy to see your work too.</p>
             </div>
             <div class="content contact">
-                <h3><a>Contact</a></h3>
+                <h3><a href="#">Contact</a></h3>
                 <p><i class="fas fa-envelope-square"></i>ioana[at]ioanaenescu[]me</p>
-                <p class="page"><a href="https://500px.com/ioanaenescu"><i class="fab fa-500px"></i>px</a></p>
+                <p class="page"><a href="https://500px.com/ioanaenescu"><i class="fab fa-500px"></i>00 px</a></p>
             </div>
         </aside>
     </section>
@@ -78,8 +85,7 @@
 </div>
 
 
-<!--<script src="script.js"></script>-->
+<script src="script.js"></script>
 <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-
 </body>
 </html>
