--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <h3><a href="#">Hello everyone!</a></h3>
                 <p>I am Ioana. I am 23 years old. I'm a civil engineer and I'm interested in programming. I love cats and dogs. In my free time I'm a amateur photographer, actually an IPhone photographer (You can visit my <a href="https://500px.com/ioanaenescu">500px page</a>, hope you'll enjoy) . And also I'm learning programming.</p>
                 <p>Click on the following icon to view my CV:</p>
-                <a class="cv" href="IoanaCV.jpg"><i class="fas fa-clipboard-list"></i></a>
+                <a class="cv" href="Ioana-cv.png"><i class="fas fa-clipboard-list"></i></a>
             </div>
         </aside>
     </section>
