--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
         </aside>
     </section>
-    <section class="menu">
+    <section id="menu" class="menu">
         <aside>
             <div class="content study">
                 <h3><a href="#">Studies</a></h3>
@@ -63,19 +63,19 @@
     <nav>
         <ul>
             <li>
-                <a title="My resume" href="#">My resume</a>
+                <a title="My resume" href="#menu">My resume</a>
             </li>
             <li>
-                <a title="Studies" href="#">Studies</a>
+                <a title="Studies" href="#menu">Studies</a>
             </li>
             <li>
-                <a title="Projects" href="#">Projescts</a>
+                <a title="Projects" href="#menu">Projescts</a>
             </li>
             <li>
-                <a title="Hobbies" href="#">Hobbies</a>
+                <a title="Hobbies" href="#menu">Hobbies</a>
             </li>
             <li>
-                <a title="Contact" href="#">Contact</a>
+                <a title="Contact" href="#menu">Contact</a>
             </li>
         </ul>
     </nav>
