--- a/index.html
+++ b/index.html
@@ -32,8 +32,6 @@
             <div class="content resume">
                 <h3><a href="#">Hello everyone!</a></h3>
                 <p>I am Ioana. I am 23 years old. I'm a civil engineer and I'm interested in programming. I love cats and dogs. In my free time I'm a amateur photographer, actually an IPhone photographer (You can visit my <a href="https://500px.com/ioanaenescu">500px page</a>, hope you'll enjoy) . And also I'm learning programming.</p>
-                <p>Click on the following icon to view my CV:</p>
-                <a class="cv" href="Ioana-cv.png"><i class="fas fa-clipboard-list"></i></a>
             </div>
         </aside>
     </section>
@@ -73,6 +71,9 @@
             </li>
             <li>
                 <a title="Hobbies" href="#menu">Hobbies</a>
+            </li>
+            <li>
+                <a href="Ioana-cv.png" rel="nofollow"> CV <i class="fas fa-clipboard-list"></i></a>
             </li>
             <li>
                 <a title="Contact" href="#menu">Contact</a>
