--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </header>
     <section class="card">
         <aside>
+                <h1 class="progres">Website in progress.</h1>
             <div class="content profile">
                 <img src="Snapseed1.jpg" alt="avatar" class="avatar">
                 <h2 class="name">Ioana</h2><br>
