--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <header>
         <a class="logo" title="Ioana Enescu's bio" href="https://ioanaenescu.me/"><span>Ioana Enescu's bio</span></a>
     </header>
+    <h1 class="progres">Website in progress.</h1>
     <section class="card">
         <aside>
-                <h1 class="progres">Website in progress.</h1>
             <div class="content profile">
                 <img src="Snapseed1.jpg" alt="avatar" class="avatar">
-                <h2 class="name">Ioana</h2><br>
+                <h2 class="name">Ioana</h2>
                 <h4 class="words">Freedom, Happiness, Love, Explore, Cats, Dogs, Photography, Programming.</h4>
             </div>
         </aside>
@@ -34,57 +34,39 @@
                 <h3><a href="#">Hello everyone!</a></h3>
                 <p>I am Ioana. I am 23 years old. I'm a civil engineer and I'm interested in programming. I love cats and dogs. In my free time I'm a amateur photographer, actually an IPhone photographer (You can visit my <a href="https://500px.com/ioanaenescu">500px page</a>, hope you'll enjoy) . And also I'm learning programming.</p>
             </div>
-        </aside>
-    </section>
-    <section id="menu" class="menu">
-        <aside>
             <div class="content study">
                 <h3><a href="#">Studies</a></h3>
                 <p>My bachelor studies I've made them at Bucharest, in the Faculty of Civil, Industrial and Agricultural Buildings, which is part of the Technical University of Civil Engineering Bucharest. It were 4 years with all the possible and impossible things, but after them I got the title of 'engineer'. In present I study in Braşov, Faculty of Economic Sciences and Business Administration. Here I follow the master studis at specialization: Management and Business Strategies. I decided that this Master’s Degree will help me a lot combine with the Bachelor Degree. So let's hope for the best in this.</p>
                 <p>I've recently received a opportunity to learn programming. I've signed up at Udacity (someone special to me suggested me that I have nothing to lose if I try). So I've got in. What have I study? Curios not? The Front-End Web Development, actually the basics of this. So I'm a begginer in all this. But don't worry, I'm preatty good at learning fast.</p>
-            </div>
-            <div class="content projects">
-                <h3><a href="#">Projects</a></h3>
-                <p>A lot of projects. Do not expect of that. I have same tiny projects. One of them is made after I have finished the Udacity Course. It is actually a grid that can be colored and also set limits for the width and height. It was pretty fun to do this. I've used JQuery for this. If you are curios I'll let you <a href="https://github.com/ioana25/Project---Pixel-Art-Maker">here</a> a link. Hope to enjoy it.</p>
             </div>
             <div class="content hobby">
                 <h3><a href="#">Hobbys</a></h3>
                 <p>If you like dogs, cats, photography I'm pretty sure that you will love what is next to come.</p>
                 <p>For the photography section, you can <a href="https://500px.com/ioanaenescu">check</a> my 500px page. Hope to enjoy and if you have an account there to follow me. And also I'll be happy to see your work too.</p>
             </div>
-            <div class="content contact">
+<!--            <div class="content contact">
                 <h3><a href="#">Contact</a></h3>
                 <p><i class="fas fa-envelope-square"></i>ioana[at]ioanaenescu[]me</p>
                 <p class="page"><a href="https://500px.com/ioanaenescu"><i class="fab fa-500px"></i>00 px</a></p>
-            </div>
+            </div>-->
         </aside>
     </section>
     <nav>
         <ul>
             <li>
-                <a title="My resume" href="#menu">My resume</a>
-            </li>
-            <li>
-                <a title="Studies" href="#menu">Studies</a>
-            </li>
-            <li>
-                <a title="Projects" href="#menu">Projescts</a>
-            </li>
-            <li>
-                <a title="Hobbies" href="#menu">Hobbies</a>
+                <a title="Portfolio" href="#main">Portfolio</a>
             </li>
             <li>
                 <a href="Ioana-cv.png" rel="nofollow"> CV <i class="fas fa-clipboard-list"></i></a>
             </li>
             <li>
-                <a title="Contact" href="#menu">Contact</a>
+                <a title="Contact" href="#main">Contact</a>
             </li>
         </ul>
     </nav>
     <footer>
-        <div class="content">
-
-        </div>
+        &copy; ioanaenescu.me
+        <p><i class="fas fa-envelope-square"></i>ioana[at]ioanaenescu[]me</p>
     </footer>
 </div>
 
