--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
     <meta name="viewport" content="width=divice-width, initial-scale=1.0">
     <title>Ioana Enescu's bio</title>
     <link rel="stylesheet" href="styles.css">
-<style>
-
-</style>
 </head>
 <body>
 <div id="page">
@@ -46,15 +43,13 @@
             </div>
 <!--            <div class="content contact">
                 <h3><a href="#">Contact</a></h3>
-                <p><i class="fas fa-envelope-square"></i>ioana[at]ioanaenescu[]me</p>
-                <p class="page"><a href="https://500px.com/ioanaenescu"><i class="fab fa-500px"></i>00 px</a></p>
             </div>-->
         </aside>
     </section>
     <nav>
         <ul>
             <li>
-                <a title="Portfolio" href="#main">Portfolio</a>
+                <a title="Portfolio" href="portfolio.html">Portfolio</a>
             </li>
             <li>
                 <a href="Ioana-cv.png" rel="nofollow"> CV <i class="fas fa-clipboard-list"></i></a>
