--- a/portfolio.html
+++ b/portfolio.html
@@ -36,13 +36,13 @@
     <nav>
         <ul>
             <li>
-                <a title="Portfolio" href="portfolio.html">Portfolio</a>
+                <a title="Portfolio" href="portfolio.html" class="icon">Portfolio</a>
             </li>
             <li>
-                <a href="Ioana-cv.png" rel="nofollow"> CV <i class="fas fa-clipboard-list"></i></a>
+                <a href="Ioana-cv.png" rel="nofollow" class="icon"> CV <i class="fas fa-clipboard-list"></i></a>
             </li>
             <li>
-                <a title="Contact" href="#main">Contact</a>
+                <a title="Contact" href="#main" class="icon">Contact</a>
             </li>
         </ul>
     </nav>
