--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <a class="logo" title="Ioana Enescu's bio" href="https://ioanaenescu.me/"><span>Ioana Enescu's bio</span></a>
     </header>
-    <h1 class="progres">Website in progress.</h1>
+<!--    <h1 class="progres">Website in progress.</h1>-->
     <section class="card">
         <aside>
             <div class="content profile">
