--- a/index.html
+++ b/index.html
@@ -14,8 +14,24 @@
     <button onclick="topFunction()" id="myBtn" title="Go to top">Up</button>
     <header>
         <a class="logo" title="Ioana Enescu's bio" href="https://ioanaenescu.me/"><span>Ioana Enescu's bio</span></a>
+        <nav class="topnav" id="myTopnav">
+            <ul>
+                <li>
+                    <a title="Portfolio" href="portfolio.html">Portfolio</a>
+                </li>
+                <li>
+                    <a href="Ioana-cv.png" rel="nofollow"> CV <i class="fas fa-clipboard-list"></i></a>
+                </li>
+                <li>
+                    <a title="Contact" href="#main">Contact</a>
+                </li>
+                <li>
+                    <a class="icon" onclick="myFunction()">&#9776;</a>
+                </li>
+            </ul>
+        </nav>
     </header>
-<!--    <h1 class="progres">Website in progress.</h1>-->
+<!--    <h1 class="progress">Website in progress.</h1>-->
     <section class="card">
         <aside>
             <div class="content profile">
@@ -46,19 +62,7 @@
             </div>-->
         </aside>
     </section>
-    <nav>
-        <ul>
-            <li>
-                <a title="Portfolio" href="portfolio.html">Portfolio</a>
-            </li>
-            <li>
-                <a href="Ioana-cv.png" rel="nofollow"> CV <i class="fas fa-clipboard-list"></i></a>
-            </li>
-            <li>
-                <a title="Contact" href="#main">Contact</a>
-            </li>
-        </ul>
-    </nav>
+
     <footer>
         &copy; ioanaenescu.me
         <p><i class="fas fa-envelope-square"></i>ioana[at]ioanaenescu[]me</p>
