--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </ul>
         </nav>
     </header>
-<!--    <h1 class="progress">Website in progress.</h1>-->
+    <h1 class="progress">Website in progress.</h1>
     <section class="card">
         <aside>
             <div class="content profile">
