--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
         <aside>
             <div class="content resume">
                 <h3><a href="#">Hello everyone!</a></h3>
-                <p>I am Ioana. I am 23 years old. I'm a civil engineer and I'm interested in programming. I love cats and dogs. In my free time I'm a amateur photographer, actually an IPhone photographer (You can visit my <a href="https://500px.com/ioanaenescu">500px page</a>, hope you'll enjoy) . And also I'm learning programming.</p>
+                <p>I am Ioana. I am 23 years old. I'm a civil engineer and I'm interested in programming. I love cats and dogs. In my free time I'm an amateur photographer, actually an IPhone photographer (You can visit my <a href="https://500px.com/ioanaenescu">500px page</a>, hope you'll enjoy) . And also I'm learning programming.</p>
             </div>
             <div class="content study">
                 <h3><a href="#">Studies</a></h3>
-                <p>My bachelor studies I've made them at Bucharest, in the Faculty of Civil, Industrial and Agricultural Buildings, which is part of the Technical University of Civil Engineering Bucharest. It were 4 years with all the possible and impossible things, but after them I got the title of 'engineer'. In present I study in Braşov, Faculty of Economic Sciences and Business Administration. Here I follow the master studis at specialization: Management and Business Strategies. I decided that this Master’s Degree will help me a lot combine with the Bachelor Degree. So let's hope for the best in this.</p>
-                <p>I've recently received a opportunity to learn programming. I've signed up at Udacity (someone special to me suggested me that I have nothing to lose if I try). So I've got in. What have I study? Curios not? The Front-End Web Development, actually the basics of this. So I'm a begginer in all this. But don't worry, I'm preatty good at learning fast.</p>
+                <p>My bachelor studies I've made them at Bucharest, in the Faculty of Civil, Industrial and Agricultural Buildings, which is part of the Technical University of Civil Engineering Bucharest. It were 4 years with all the possible and impossible things, but after them I got the title of 'engineer'. In present I study in Braşov, Faculty of Economic Sciences and Business Administration. Here I follow the master studies at specialization: Management and Business Strategies. I decided that this Master’s Degree will help me a lot combine with the Bachelor Degree. So let's hope for the best in this.</p>
+                <p>I've recently received an opportunity to learn programming. I've signed up at Udacity (someone special to me suggested me that I have nothing to lose if I try). So I've got in. What have I study? Curios not? The Front-End Web Development, actually the basics of this. So I'm a beginner in all this. But don't worry, I'm pretty good at learning fast.</p>
             </div>
             <div class="content hobby">
                 <h3><a href="#">Hobbys</a></h3>
-                <p>If you like dogs, cats, photography I'm pretty sure that you will love what is next to come.</p>
+                <p>If you like dogs, cats, photography and I'm pretty sure that you will love what is next to come.</p>
                 <p>For the photography section, you can <a href="https://500px.com/ioanaenescu">check</a> my 500px page. Hope to enjoy and if you have an account there to follow me. And also I'll be happy to see your work too.</p>
             </div>
 <!--            <div class="content contact">
