--- a/portfolio.html
+++ b/portfolio.html
@@ -14,6 +14,22 @@
     <button onclick="topFunction()" id="myBtn" title="Go to top">Up</button>
     <header>
         <a class="logo" title="Ioana Enescu's bio" href="https://ioanaenescu.me/"><span>Ioana Enescu's bio</span></a>
+        <nav class="topnav" id="myTopnav">
+            <ul>
+                <li>
+                    <a title="Portfolio" href="portfolio.html">Portfolio</a>
+                </li>
+                <li>
+                    <a href="Ioana-cv.png" rel="nofollow"> CV <i class="fas fa-clipboard-list"></i></a>
+                </li>
+                <li>
+                    <a title="Contact" href="#main">Contact</a>
+                </li>
+                <li>
+                    <a class="icon" onclick="myFunction()">&#9776;</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <h1 class="progres">Website in progress.</h1>
     <section class="projectI">
@@ -33,19 +49,50 @@
             <p>Here you can find a demo: <a href="https://jsfiddle.net/0onc0a0s/6/"><i class="far fa-file-code"></i> Demo</a></p>
         </aside>
     </section>
-    <nav>
-        <ul>
-            <li>
-                <a title="Portfolio" href="portfolio.html" class="icon">Portfolio</a>
-            </li>
-            <li>
-                <a href="Ioana-cv.png" rel="nofollow" class="icon"> CV <i class="fas fa-clipboard-list"></i></a>
-            </li>
-            <li>
-                <a title="Contact" href="#main" class="icon">Contact</a>
-            </li>
-        </ul>
-    </nav>
+    <section class="projectII">
+        <aside>
+            <h2>Office building (metal structure) - 10 levels (Ds+P+8E)</h2>
+            <p> This is my bachelor degree project. And it is composed of two parts: structure and management, as it follows:
+                <pre>
+            <i class="fas fa-puzzle-piece"></i>The structure part:
+                <i class="fas fa-arrow-right"></i> Written part:
+                 Technical report
+                 Evaluate uploads
+                 Modeling the bracing frame
+                 Diagonal dimensioning
+                 Enlargement factor evaluation
+                 Sizing upright current areas and pillars
+                 Dimensioning base pillars
+                 Assembly joining
+                 Dimensioning floor girder.
+                <i class="fas fa-arrow-right"></i> Planes:
+                 Marginal pillar + execution details
+                 Current girder (Antiseismic Contour Frame) + details
+                 Diagonal (Antiseismic Frame) + details, Floor plan + details
+                 Details bolt anchor + details of it
+                 Details secondary and principal girder (Gravitational Frame)
+                </pre>
+            <p><pre>
+            <i class="fas fa-puzzle-piece"></i>The part of management and economy:
+                <i class="fas fa-arrow-right"></i> Written part:
+                 Measurement
+                 General estimate
+                 Find offer
+                 Analytically
+                 Lists of works
+                 Lists of resource consumption: materials, human, machinery and transport
+                 Establishing execution speeds and workgroups
+                 Schedule work execution through the chain method, including the Gantt chart type chart and human resources graph
+                 Planning work execution through the MPM process, including the Gantt chart type chart and human resources graph
+                 Establishment of the yard population and its structure; Social-administrative facilities related to the organization of the site
+                 Occupational health and safety management system
+                <i class="fas fa-arrow-right"></i> Planes:
+                 Plan to organize site construction at construction level
+                </pre>
+            Also all my plans were sketched in AutoCad 2D.
+            </p>
+        </aside>
+    </section>
     <footer>
         &copy; ioanaenescu.me
         <p><i class="fas fa-envelope-square"></i>ioana[at]ioanaenescu[]me</p>
