--- a/portfolio.html
+++ b/portfolio.html
@@ -52,43 +52,47 @@
     <section class="projectII">
         <aside>
             <h2>Office building (metal structure) - 10 levels (Ds+P+8E)</h2>
-            <p> This is my bachelor degree project. And it is composed of two parts: structure and management, as it follows:
-                <pre>
-            <i class="fas fa-puzzle-piece"></i>The structure part:
-                <i class="fas fa-arrow-right"></i> Written part:
-                 Technical report
-                 Evaluate uploads
-                 Modeling the bracing frame
-                 Diagonal dimensioning
-                 Enlargement factor evaluation
-                 Sizing upright current areas and pillars
-                 Dimensioning base pillars
-                 Assembly joining
-                 Dimensioning floor girder.
-                <i class="fas fa-arrow-right"></i> Planes:
-                 Marginal pillar + execution details
-                 Current girder (Antiseismic Contour Frame) + details
-                 Diagonal (Antiseismic Frame) + details, Floor plan + details
-                 Details bolt anchor + details of it
-                 Details secondary and principal girder (Gravitational Frame)
-                </pre>
-            <p><pre>
-            <i class="fas fa-puzzle-piece"></i>The part of management and economy:
-                <i class="fas fa-arrow-right"></i> Written part:
-                 Measurement
-                 General estimate
-                 Find offer
-                 Analytically
-                 Lists of works
-                 Lists of resource consumption: materials, human, machinery and transport
-                 Establishing execution speeds and workgroups
-                 Schedule work execution through the chain method, including the Gantt chart type chart and human resources graph
-                 Planning work execution through the MPM process, including the Gantt chart type chart and human resources graph
-                 Establishment of the yard population and its structure; Social-administrative facilities related to the organization of the site
-                 Occupational health and safety management system
-                <i class="fas fa-arrow-right"></i> Planes:
-                 Plan to organize site construction at construction level
-                </pre>
+            <p> This is my bachelor degree project. And it is composed of two parts: structure and management, as it follows:<br>
+            <i class="fas fa-puzzle-piece"></i>The structure part:<br>
+            <ul>
+            <i class="fas fa-arrow-right"></i> Written part:
+            <li>Technical report</li>
+            <li>Evaluate uploads</li>
+            <li>Modeling the bracing frame</li>
+            <li>Diagonal dimensioning</li>
+            <li>Enlargement factor evaluation</li>
+            <li>Sizing upright current areas and pillars</li>
+            <li>Dimensioning base pillars</li>
+            <li>Assembly joining</li>
+            <li>Dimensioning floor girder.</li>
+            <i class="fas fa-arrow-right"></i> Planes:
+            <li>Marginal pillar + execution details</li>
+            <li>Current girder (Antiseismic Contour Frame) + details</li>
+            <li>Diagonal (Antiseismic Frame) + details</li>
+            <li>Floor plan + details</li>
+            <li>Details bolt anchor + details of it</li>
+            <li>Details secondary and principal girder (Gravitational Frame)</li>
+            </ul>
+            </p>
+            <!--<button id="read-more-button">Read More</button>-->
+            <p id="read-more">
+            <i class="fas fa-puzzle-piece"></i>The part of management and economy:<br>
+            <ul>
+            <i class="fas fa-arrow-right"></i> Written part:
+            <li>Measurement</li>
+            <li>General estimate</li>
+            <li>Find offer</li>
+            <li>Analytically</li>
+            <li>Lists of works</li>
+            <li>Lists of resource consumption: materials, human, machinery and transport</li>
+            <li>Establishing execution speeds and workgroups</li>
+            <li>Schedule work execution through the chain method, including the Gantt chart type chart and human resources graph</li>
+            <li>Planning work execution through the MPM process, including the Gantt chart type chart and human resources graph</li>
+            <li>Establishment of the yard population and its structure; Social-administrative facilities related to the organization of the site</li>
+            <li>Occupational health and safety management system</li>
+            <i class="fas fa-arrow-right"></i> Planes:
+            <li>Plan to organize site construction at construction level</li>
+            </ul>
             Also all my plans were sketched in AutoCad 2D.
             </p>
         </aside>
