--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
             </ul>
         </nav>
     </header>
-    <h1 class="progress">Website in progress.</h1>
-    <section class="card">
+      <section class="card">
         <aside>
             <div class="content profile">
                 <img src="Snapseed1.jpg" alt="avatar" class="avatar">
@@ -57,12 +56,9 @@
                 <p>If you like dogs, cats, photography and I'm pretty sure that you will love what is next to come.</p>
                 <p>For the photography section, you can <a href="https://500px.com/ioanaenescu">check</a> my 500px page. Hope to enjoy and if you have an account there to follow me. And also I'll be happy to see your work too.</p>
             </div>
-<!--            <div class="content contact">
-                <h3><a href="#">Contact</a></h3>
-            </div>-->
+            </div>
         </aside>
     </section>
-
     <footer>
         &copy; ioanaenescu.me
         <p><i class="fas fa-envelope-square"></i>ioana[at]ioanaenescu[]me</p>
