--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="description" content="Hello, everyone! I'm Ioana and I'm a civil engineer and I'm interested in programming. I love cats and dogs. In my free time I'm a amateur photographer. And also I'm learning programming.">
     <meta name="author" content="Ioana Enescu">
-    <meta name="keywords" content="Bio, Programming, Dogs, Cats, Photography">
+    <meta name="keywords" content="Resume, Studies, Hobbies, Programming, Dogs, Cats, Photography">
     <meta name="viewport" content="width=divice-width, initial-scale=1.0">
-    <title>Ioana Enescu's bio</title>
+    <title>Ioana Enescu</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
