--- a/portfolio.html
+++ b/portfolio.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Hello, everyone! I'm Ioana and I'm a civil engineer and I'm interested in programming. I love cats and dogs. In my free time I'm a amateur photographer. And also I'm learning programming.">
+    <meta name="description" content="Hello, everyone! Here are some of my projects which include programming and also engineering.">
     <meta name="author" content="Ioana Enescu">
-    <meta name="keywords" content="Bio, Programming, Dogs, Cats, Photography">
+    <meta name="keywords" content="Portfolio, Programming, Dogs, Cats, Photography">
     <meta name="viewport" content="width=divice-width, initial-scale=1.0">
-    <title>Ioana Enescu's bio</title>
+    <title>Ioana Enescu's portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
