--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 <div id="page">
     <button onclick="topFunction()" id="myBtn" title="Go to top">Up</button>
     <header>
-        <a class="logo" title="Ioana Enescu's bio" href="https://ioanaenescu.me/"><span>Ioana Enescu's bio</span></a>
+        <a class="logo" title="Ioana Enescu" href="https://ioanaenescu.me/"><span>Ioana Enescu</span></a>
         <nav class="topnav" id="myTopnav">
             <ul>
                 <li>
